--- a/src/components/Pagenumber.css
+++ b/src/components/Pagenumber.css
@@ -1,3 +1,4 @@
+
 .pagination {
     display: flex;
     justify-content: center;
@@ -17,6 +18,8 @@
     justify-content: center;
     align-items: center;
     font-size: 1rem;
+    font-weight: 600;
+
   }
 
   ul.pagination li:first-child{
