--- a/src/routes/ClubsDetail.css
+++ b/src/routes/ClubsDetail.css
@@ -1,60 +1,147 @@
-.Detailboard{
-    background-color: white;
-    height: 500px;
-    width: 1400px;
-    border-radius: 30px;
-    margin: auto;
-    margin-top: 20px;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
-    padding-top: 10px;
-    display: flex;
+.Detailboard {
+  background-color: white;
+  width: 1400px;
+  border-radius: 30px;
+  margin: auto;
+  margin-top: 20px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
+  padding-top: 10px;
+}
+.Detailbox {
+  display: flex;
 }
 .ClubsDetailimg {
-    height: 470px;
-    margin-left: 20px;
-    margin-top: 10px;
-    border-radius: 20px;
-    background-color: rgb(210, 210, 210);
+  height: 470px;
+  margin-left: 20px;
+  margin-top: 10px;
+  border-radius: 20px;
+  background-color: rgb(210, 210, 210);
+  max-width: 500px;
+  object-fit: cover;
 }
 .Backbutton {
-    margin-top:7px;
-    margin-left: 7px;
-    border: none;
-    width: 32px;
-    height: 30px;
-    background-color: white;
-    cursor: pointer;
+  margin-top: 7px;
+  margin-left: 7px;
+  border: none;
+  width: 32px;
+  height: 30px;
+  background-color: white;
+  cursor: pointer;
 }
-.Contentbox{
-    margin-left: 30px;
+.Contentbox {
+  margin-left: 30px;
+  margin-right: 30px;
+  width: 1340px;
+  display: flex;
+  flex-direction: column;
 }
 .Userbox {
-    margin-top: 7px;
-    display: flex;
-    gap: 10px;
-    align-items: center;
+  margin-top: 7px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 .Profileimg {
-    background-color: rgb(211, 211, 211);
-    width: 40px;
-    border-radius: 30px;
+  background-color: rgb(211, 211, 211);
+  width: 40px;
+  border-radius: 30px;
 }
-.DetailSession{
-    background-color: rgb(239, 239, 239);
-    text-align: center;
-    height: 30px;
-    width: 120px;
-    margin-top: 10px;
-    font-size: 20px;
-    border-radius: 30px;
-    padding-top: 8px;
+.DetailSession {
+  background-color: rgb(239, 239, 239);
+  text-align: center;
+  height: 30px;
+  width: 120px;
+  margin-top: 10px;
+  font-size: 20px;
+  border-radius: 30px;
+  padding-top: 8px;
 }
 .Contentbox h1 {
-    margin-top: 15px;
-    font-size: 35px;
+  margin-top: 15px;
+  font-size: 35px;
 }
 .DetailText {
-    font-size: 20px;
-    margin-top: 15px;
-    width: 800px;
+  font-size: 20px;
+  margin-top: 15px;
+}
+
+hr {
+  margin-top: 20px;
+  border: 1px solid rgb(225, 225, 225);
+  width: 1320px;
+}
+.Commentbox {
+  margin-top: 10px;
+  gap: 10px;
+  align-items: center;
+  margin-left: 30px;
+}
+.CommentContent {
+  display: flex;
+  gap: 10px;
+  margin-top: 8px;
+  margin-bottom: 5px;
+}
+.Commentnickname {
+  font-size: 17px;
+  font-weight: 600;
+}
+.Comment2 {
+  display: flex;
+  gap: 5px;
+}
+
+.ScrBtn {
+  width: 120px;
+  height: 40px;
+  background-color: rgb(121, 186, 242);
+  border: none;
+  border-radius: 8px;
+  color: white;
+  font-size: 17px;
+  font-weight: 600;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+}
+.ModifyBtns{
+    margin-left: auto;
+    display: flex;
+    
+}
+.Editbox {
+    display: flex;
+    gap: 100px;
+    width: 1400px;
+}
+
+.EditContentbox {
+display: flex;
+flex-direction: column;
+}
+
+.EditBtns{
+    margin: auto;
+    display: flex;
+    gap: 20px;
+    margin-top: 10px;
+    align-items: flex-end;
+}
+.EditBtns button {
+    width: 100px;
+    height: 30px;
+    border: none;
+    background-color:rgb(121, 186, 242);
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.EditBtns button:first-child {
+  background-color:  rgb(213, 221, 230);
+  color: rgb(77, 85, 96);
 }
