--- a/src/routes/PRDetail.css
+++ b/src/routes/PRDetail.css
@@ -1,13 +1,12 @@
 .Detailboard{
     background-color: white;
-    height: 500px;
     width: 1400px;
     border-radius: 30px;
     margin: auto;
     margin-top: 20px;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
     padding-top: 10px;
-    display: flex;
+    padding-bottom: 20px;
 }
 .PRDetailimg {
     height: 470px;
@@ -15,6 +14,7 @@
     margin-top: 10px;
     border-radius: 20px;
     background-color: rgb(210, 210, 210);
+    object-fit: cover;
 }
 
 
