--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,6 +7,7 @@
   width: 100vw;
   background-color: white;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
+  z-index: 1;
 }
 .Container {
   display: flex;
